--- a/wp-content/themes/skalTheme/package.json
+++ b/wp-content/themes/skalTheme/package.json
@@ -3,10 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tailwindcss -i ./src/input.css -o ./assets/css/tailwind.css --watch",
+    "build-prod": "tailwindcss -i ./src/input.css -o ./assets/css/tailwind.css --minify",
+    "dev": "tailwindcss -i ./src/input.css -o ./assets/css/tailwind.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["wordpress", "theme", "tailwindcss"],
+  "author": "Kildrax",
   "license": "ISC",
-  "description": ""
+  "description": "WordPress theme with TailwindCSS for Skal Commerce",
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.13",
+    "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/forms": "^0.5.7"
+  }
 }
