ultimos ajustes antes de subir una primera version a produccion. Se arreglo el problema al intentar realizar orden, se escondieron los rating stars y el icono de login

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - wordpress:/var/www/html
       - ./wp-content:/var/www/html/wp-content  # solo esta carpeta en local
       - ./php-custom.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ./logs:/var/log
     depends_on:
       - db
       - redis
