--- a/php-custom.ini
+++ b/php-custom.ini
@@ -3,3 +3,7 @@ post_max_size = 128M
 memory_limit = 512M
 max_execution_time = 300
 max_input_time = 300
+log_errors = On
+error_reporting = E_ALL
+display_errors = Off
+error_log = /var/log/php-errors.log
